...
    self.fullScreenBtn.selected = sender == self.fullScreenBtn;
    self.interstitialBtn.selected = sender == self.interstitialBtn;
    
    if (![NSStringFromClass([self class]) containsString:@"Auto"]) {
        if (sender == self.fullScreenBtn) {
            
            [_footView.loadBtn setTitle:@"Load FullScreen AD" forState:UIControlStateNormal];
            [_footView.readyBtn setTitle:@"Is FullScreen AD Ready" forState:UIControlStateNormal];
            [_footView.showBtn setTitle:@"Show FullScreen AD" forState:UIControlStateNormal];
            
        }else{
            [_footView.loadBtn setTitle:@"Load Interstitial AD" forState:UIControlStateNormal];
            [_footView.readyBtn setTitle:@"Is Interstitial AD Ready" forState:UIControlStateNormal];
            [_footView.showBtn setTitle:@"Show Interstitial AD" forState:UIControlStateNormal];
        }
...
    BOOL isReady = [[ATAdManager sharedManager] interstitialReadyForPlacementID:self.placementID];
    
    if (_isAuto) {
        isReady = [[ATInterstitialAutoAdManager sharedInstance] autoLoadInterstitialReadyForPlacementID:self.placementID];
    }
    
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:isReady ? @"Ready!" : @"Not Yet!" message:nil preferredStyle:UIAlertControllerStyleAlert];
    [self presentViewController:alert animated:YES completion:^{
        dispatch_after(dispatch_time(DISPATCH_TIME_NOW, (int64_t)(1.5 * NSEC_PER_SEC)), dispatch_get_main_queue(), ^{
            [alert dismissViewControllerAnimated:YES completion:nil];
        });
    }];
}
...
- (ATModelButton *)interstitialBtn {
    if (!_interstitialBtn) {
        _interstitialBtn = [[ATModelButton alloc] initWithFrame:CGRectMake(0, 0, kScreenW, kScaleW(532))];
        _interstitialBtn.tag = 1;
        _interstitialBtn.backgroundColor = [UIColor whiteColor];
        _interstitialBtn.layer.borderWidth = kScaleW(5);
        _interstitialBtn.modelLabel.text = @"Interstitial";
        _interstitialBtn.image.image = [UIImage imageNamed:@"Interstitial"];
        [_interstitialBtn addTarget:self action:@selector(changeModel:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _interstitialBtn;
}

...
